--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ABC</title>
+    <title>Digital Typography Alphabet</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 
@@ -38,8 +38,6 @@
         <div id="carmen-2">Z</div> 
         <div id="stefanie-1">?</div> 
         <div id="stefanie-2">!</div> 
-         
       </div>
 </body>
-
 </html>
