--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
         <div id="tina-2">P</div>
         <div id="evelyn-1">Q</div>
         <div id="evelyn-2">R</div> 
-        <div id="josephine-1">S</div>  
-        <div id="josephine-2">T</div>
+        <div id="stefanie-1">S</div>  
+        <div id="stefanie-2">T</div>
         <div id="leonard-1">U</div>
         <div id="leonard-2">V</div>  
         <div id="andrin-1">W</div>
         <div id="andrin-2">X</div>
         <div id="carmen-1">Y</div> 
         <div id="carmen-2">Z</div> 
-        <div id="stefanie-1">?</div> 
-        <div id="stefanie-2">!</div> 
+        <div id="josephine-1">?</div> 
+        <div id="josephine-2">!</div> 
       </div>
 </body>
 </html>
