clarify a lot of things

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <div id="manuel-2">J</div>
         <div id="seraina-1">K</div>
         <div id="seraina-2">L</div>  
-        <div id="nicole-1">M</div>
-        <div id="nicole-2">N</div>
+        <div id="vera-1">M</div>
+        <div id="josef-2">N</div>
         <div id="tina-1">O</div>  
         <div id="tina-2">P</div>
         <div id="evelyn-1">Q</div>
@@ -36,8 +36,10 @@
         <div id="andrin-2">X</div>
         <div id="carmen-1">Y</div> 
         <div id="carmen-2">Z</div> 
-        <div id="josephine-1">?</div> 
-        <div id="josephine-2">!</div> 
+        <!-- <div id="nicole-1">M</div> -->
+        <!-- <div id="nicole-2">N</div> -->
+        <!-- <div id="josephine-1">?</div> 
+        <div id="josephine-2">!</div>-->
       </div>
 </body>
 </html>
